--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <script async src="https://arc.io/widget.min.js#L1SfLEWE"></script>
-      <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-VHVNHMYGN3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-VHVNHMYGN3');
-</script>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <link rel="stylesheet" href="index.css">
@@ -22,7 +12,8 @@
    </head>
    <body>
       <div id="header">
-         <img src="logo.gif" alt="Logo">
+         <img src="https://epikschoolcenter.onrender.com/img/logo.png" alt="Logo">
+         Epic School Center Proxy
       </div>
       <div id="content">
          <h1>Search the Web and use the FIRST static proxy, we also dont log/sell your data, were profit free!</h1>
@@ -35,9 +26,6 @@
             <p id="uv-error"></p>
             <pre id="uv-error-code"></pre>
           </div>
-         <a href="https://discord.gg/zJhPJYJCeJ" target="_blank" class="fa-brands fa-discord"></a>
-         <a href="https://github.com/TheTIW/UV-Static" target="_blank"class="fa-brands fa-github"></a>
-         <a href="https://starttiw.org" target="_blank"class="fa-solid fa-cloud"></a>
       </div>
       <script src="uv/uv.bundle.js" defer></script>
       <script src="uv/uv.config.js" defer></script>
@@ -46,7 +34,8 @@
       <script src="index.js" defer></script>
       <script src="error.js" defer></script>
       <div id="footer">
-         <p>&copy; 2023 TIW. All rights reserved.</p>
+         <p>&copy;2023 Barney CO</p>
+         <p>Proxy by TIW and Titanium Network</p>
       </div>
    </body>
 </html>
