--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
    </head>
    <body>
       <div id="header">
-         <img src="https://epikschoolcenter.onrender.com/img/logo.png" alt="Logo">
+         <img src="https://epicschoolcenter.com/img/logo.png" alt="Logo">
          Epic School Center Proxy
       </div>
       <div id="content">
