--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
    <body>
       <div id="header">
          <img src="https://epicschoolcenter.com/img/logo.png" alt="Logo">
-         Epic School Center Proxy
+         </h1>Epic School Center Proxy</h1>
       </div>
       <div id="content">
          <h1>Search the Web and use the FIRST static proxy, we also dont log/sell your data, were profit free!</h1>
