--- a/static/index.html
+++ b/static/index.html
@@ -12,8 +12,7 @@
    </head>
    <body>
       <div id="header">
-         <img src="https://epicschoolcenter.com/img/logo.png" alt="Logo">
-         </h1>Epic School Center Proxy</h1>
+         <center><img src="https://epicschoolcenter.com/img/logo.png" alt="Logo"></center>
       </div>
       <div id="content">
          <h1>Search the Web and use the FIRST static proxy, we also dont log/sell your data, were profit free!</h1>
